--- a/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/2_neural_network_from_scratch.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/2_neural_network_from_scratch.ipynb
@@ -6,7 +6,7 @@
       "name": "2-neural-network-from-scratch.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOq70qEKe+vfGpCv7zJdx7F",
+      "authorship_tag": "ABX9TyNQ1JpTtqHix00HkGW2zl6H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
         "of what’s going on behind the scenes in a neural network. What was a magical\n",
         "black box at the start, has turned into a clearer picture.\n",
         "\n",
-        "<img src='images/2.png?raw=1' width='800'/>\n",
+        "<img src='https://github.com/rahiakela/data-learning-research-and-practice/blob/main/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/images/2.png?raw=1' width='800'/>\n",
         "\n",
         "- the model, composed of layers that are chained together, maps the input data to predictions. \n",
         "- The loss function then compares these predictions\n",
@@ -71,13 +71,15 @@
         "id": "Q0IXiaYkrCla"
       },
       "source": [
+        "import tensorflow as tf\n",
         "from tensorflow.keras.datasets import mnist\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
         "\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import math"
       ],
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -107,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ZL4iPADuq_W",
-        "outputId": "02415869-d5fc-4236-8ff1-88ab14802065"
+        "outputId": "48e65cb3-c3f8-4163-9432-41036481c56f"
       },
       "source": [
         "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
@@ -206,7 +208,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6-tSBvyDvoLA",
-        "outputId": "2eb9e8da-3933-427b-fb9e-7e51dd2a0a46"
+        "outputId": "bb1804fb-4438-4a7b-c8b9-1b8eaff8ea0d"
       },
       "source": [
         "model.fit(train_images, train_labels, epochs=5, batch_size=128)"
@@ -218,22 +220,22 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "469/469 [==============================] - 5s 10ms/step - loss: 0.2598 - accuracy: 0.9248\n",
+            "469/469 [==============================] - 5s 9ms/step - loss: 0.2560 - accuracy: 0.9260\n",
             "Epoch 2/5\n",
-            "469/469 [==============================] - 5s 10ms/step - loss: 0.1038 - accuracy: 0.9695\n",
+            "469/469 [==============================] - 4s 9ms/step - loss: 0.1036 - accuracy: 0.9694\n",
             "Epoch 3/5\n",
-            "469/469 [==============================] - 5s 10ms/step - loss: 0.0680 - accuracy: 0.9798\n",
+            "469/469 [==============================] - 4s 9ms/step - loss: 0.0680 - accuracy: 0.9797\n",
             "Epoch 4/5\n",
-            "469/469 [==============================] - 5s 10ms/step - loss: 0.0497 - accuracy: 0.9847\n",
+            "469/469 [==============================] - 4s 9ms/step - loss: 0.0499 - accuracy: 0.9852\n",
             "Epoch 5/5\n",
-            "469/469 [==============================] - 4s 9ms/step - loss: 0.0377 - accuracy: 0.9884\n"
+            "469/469 [==============================] - 4s 9ms/step - loss: 0.0383 - accuracy: 0.9886\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f91347913d0>"
+              "<keras.callbacks.History at 0x7fb6f7144490>"
             ]
           },
           "metadata": {},
@@ -269,6 +271,206 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "CEdUocYXwGYh"
+      },
+      "source": [
+        "What better demonstrates full, unambiguous understanding than implementing everything\n",
+        "from scratch? Of course, what “from scratch” means here is relative: we won’t\n",
+        "reimplement basic tensor operations, and we won’t implement backpropagation. But\n",
+        "we’ll go to such a low level that we will barely use any Keras functionality at all."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AIcxzi5vLURe"
+      },
+      "source": [
+        "###A simple Dense class"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ugDuoqsxLVKt"
+      },
+      "source": [
+        "You’ve learned earlier that the Dense layer implements the following input transformation,\n",
+        "where W and b are model parameters, and activation is an element-wise\n",
+        "function (usually relu, but it would be softmax for the last layer):\n",
+        "\n",
+        "```python\n",
+        "output = activation(dot(W, input) + b)\n",
+        "```\n",
+        "\n",
+        "Let’s implement a simple Python class, NaiveDense, that creates two TensorFlow\n",
+        "variables, W and b, and exposes a `__call__()` method that applies the preceding\n",
+        "transformation."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MWacHeTsLe1h"
+      },
+      "source": [
+        "class NaiveDense:\n",
+        "\n",
+        "  def __init__(self, input_size, output_size, activation):\n",
+        "    self.activation = activation\n",
+        "\n",
+        "    # Create a matrix, W, of shape (input_size, output_size), initialized with random values\n",
+        "    w_shape = (input_size, output_size)\n",
+        "    w_initial_value = tf.random.uniform(w_shape, minval=0, maxval=1e-1)\n",
+        "    self.W = tf.Variable(w_initial_value)\n",
+        "\n",
+        "    # Create a vector, b, of shape (output_size,), initialized with zeros\n",
+        "    b_shape = (output_size, )\n",
+        "    b_initial_value = tf.zeros(b_shape)\n",
+        "    self.b = tf.Variable(b_initial_value)\n",
+        "\n",
+        "  def __call__(self, inputs):\n",
+        "    return self.activation(tf.matmul(inputs, self.W) + self.b)\n",
+        "\n",
+        "  # Convenience method for retrieving the layer’s weights\n",
+        "  @property\n",
+        "  def weights(self):\n",
+        "    return [self.W, self.b]"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PJQkPSMXPTQe"
+      },
+      "source": [
+        "###A simple Sequential class"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UKrQl30cPUKk"
+      },
+      "source": [
+        "Now, let’s create a NaiveSequential class to chain these layers. It wraps a list of layers\n",
+        "and exposes a `__call__()` method that simply calls the underlying layers on the\n",
+        "inputs, in order. \n",
+        "\n",
+        "It also features a weights property to easily keep track of the layers’\n",
+        "parameters."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HGMMumwfPctB"
+      },
+      "source": [
+        "class NaiveSequential:\n",
+        "\n",
+        "  def __init__(self, layers):\n",
+        "    self.layers = layers\n",
+        "\n",
+        "  def __call__(self, inputs):\n",
+        "    x = inputs\n",
+        "    for layer in self.layers:\n",
+        "      x = layer(x)\n",
+        "    return x\n",
+        "\n",
+        "  @property\n",
+        "  def weights(self):\n",
+        "    weights = []\n",
+        "    for layer in self.layers:\n",
+        "      weights += layer.weights\n",
+        "    return weights"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b5AY46DYQbfZ"
+      },
+      "source": [
+        "Using this NaiveDense class and this NaiveSequential class, we can create a mock\n",
+        "Keras model:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hre_5n22QcP6"
+      },
+      "source": [
+        "model = NaiveSequential([\n",
+        "    NaiveDense(input_size=28 * 28, output_size=512, activation=tf.nn.relu),\n",
+        "    NaiveDense(input_size=512, output_size=10, activation=tf.nn.softmax)                     \n",
+        "])\n",
+        "\n",
+        "assert len(model.weights) == 4"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9aS4RJ9WRKOh"
+      },
+      "source": [
+        "###A batch generator"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xCSXfHcdRLUv"
+      },
+      "source": [
+        "Next, we need a way to iterate over the MNIST data in mini-batches. This is easy:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jJ4JD7kwROWm"
+      },
+      "source": [
+        "class BatchGenerator:\n",
+        "  def __init__(self, images, labels, batch_size=128):\n",
+        "    assert len(images) == len(labels)\n",
+        "\n",
+        "    self.index = 0\n",
+        "    self.images = images\n",
+        "    self.labels = labels\n",
+        "    self.batch_size = batch_size\n",
+        "    self.num_batches = math.ceil(len(images) / batch_size)\n",
+        "\n",
+        "  def next(self):\n",
+        "    images = self.images[self.index: self.index + self.batch_size]\n",
+        "    labels = self.labels[self.index: self.index + self.batch_size]\n",
+        "    self.index += self.batch_size\n",
+        "    return images, labels"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Upyji865SWWY"
+      },
+      "source": [
+        "##Running one training step"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nuEullaSSYbk"
       },
       "source": [
         ""
