--- a/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/2_neural_network_from_scratch.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/2_neural_network_from_scratch.ipynb
@@ -6,7 +6,7 @@
       "name": "2-neural-network-from-scratch.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNQ1JpTtqHix00HkGW2zl6H",
+      "authorship_tag": "ABX9TyMFZ/rEBJtALAyRXN9rWCRi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,11 +75,12 @@
         "from tensorflow.keras.datasets import mnist\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
+        "from tensorflow.keras import optimizers\n",
         "\n",
         "import numpy as np\n",
         "import math"
       ],
-      "execution_count": 12,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -105,11 +106,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5ZL4iPADuq_W",
-        "outputId": "48e65cb3-c3f8-4163-9432-41036481c56f"
+        "id": "5ZL4iPADuq_W"
       },
       "source": [
         "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
@@ -119,18 +116,8 @@
         "test_images = test_images.reshape((10000, 28 * 28))\n",
         "test_images = test_images.astype(\"float32\") / 255"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n",
-            "11501568/11490434 [==============================] - 0s 0us/step\n"
-          ]
-        }
-      ]
+      "execution_count": 34,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -155,7 +142,7 @@
         "   layers.Dense(10, activation=\"softmax\")                      \n",
         "])"
       ],
-      "execution_count": 3,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -182,7 +169,7 @@
       "source": [
         "model.compile(optimizer=\"rmsprop\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])"
       ],
-      "execution_count": 4,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -208,38 +195,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6-tSBvyDvoLA",
-        "outputId": "bb1804fb-4438-4a7b-c8b9-1b8eaff8ea0d"
+        "outputId": "9af7d2c2-1cd2-4876-f83f-497426e21455"
       },
       "source": [
         "model.fit(train_images, train_labels, epochs=5, batch_size=128)"
       ],
-      "execution_count": 5,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "469/469 [==============================] - 5s 9ms/step - loss: 0.2560 - accuracy: 0.9260\n",
+            "469/469 [==============================] - 5s 11ms/step - loss: 0.2553 - accuracy: 0.9258\n",
             "Epoch 2/5\n",
-            "469/469 [==============================] - 4s 9ms/step - loss: 0.1036 - accuracy: 0.9694\n",
+            "469/469 [==============================] - 5s 11ms/step - loss: 0.1027 - accuracy: 0.9699\n",
             "Epoch 3/5\n",
-            "469/469 [==============================] - 4s 9ms/step - loss: 0.0680 - accuracy: 0.9797\n",
+            "469/469 [==============================] - 5s 11ms/step - loss: 0.0671 - accuracy: 0.9801\n",
             "Epoch 4/5\n",
-            "469/469 [==============================] - 4s 9ms/step - loss: 0.0499 - accuracy: 0.9852\n",
+            "469/469 [==============================] - 5s 11ms/step - loss: 0.0493 - accuracy: 0.9855\n",
             "Epoch 5/5\n",
-            "469/469 [==============================] - 4s 9ms/step - loss: 0.0383 - accuracy: 0.9886\n"
+            "469/469 [==============================] - 5s 11ms/step - loss: 0.0366 - accuracy: 0.9892\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7fb6f7144490>"
+              "<keras.callbacks.History at 0x7f7d97bfc610>"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 37
         }
       ]
     },
@@ -336,7 +323,7 @@
         "  def weights(self):\n",
         "    return [self.W, self.b]"
       ],
-      "execution_count": 7,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -386,7 +373,7 @@
         "      weights += layer.weights\n",
         "    return weights"
       ],
-      "execution_count": 9,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -412,7 +399,7 @@
         "\n",
         "assert len(model.weights) == 4"
       ],
-      "execution_count": 10,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -455,7 +442,7 @@
         "    self.index += self.batch_size\n",
         "    return images, labels"
       ],
-      "execution_count": 13,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -473,7 +460,252 @@
         "id": "nuEullaSSYbk"
       },
       "source": [
-        ""
+        "The most difficult part of the process is the “training step”: updating the weights of\n",
+        "the model after running it on one batch of data. We need to\n",
+        "\n",
+        "1. Compute the predictions of the model for the images in the batch.\n",
+        "2. Compute the loss value for these predictions, given the actual labels.\n",
+        "3. Compute the gradient of the loss with regard to the model’s weights.\n",
+        "4. Move the weights by a small amount in the direction opposite to the gradient.\n",
+        "\n",
+        "To compute the gradient, we will use the TensorFlow GradientTape object."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9cXiPWQioyHj"
+      },
+      "source": [
+        "def one_training_step(model, images_path, labels_path):\n",
+        "  # Run the “forward pass” (compute the model’s predictions under a GradientTape scope).\n",
+        "  with tf.GradientTape() as tape:\n",
+        "    predictions = model(images_path)\n",
+        "    per_sample_losses = tf.keras.losses.sparse_categorical_crossentropy(labels_path, predictions)\n",
+        "    average_loss = tf.reduce_mean(per_sample_losses)\n",
+        "  \n",
+        "  # Compute the gradient of the loss with regard to the weights. The output gradients is a list where each entry corresponds to a weight from the model.weights list.\n",
+        "  gradients = tape.gradient(average_loss, model.weights)\n",
+        "  # Update the weights using the gradients\n",
+        "  update_weights(gradients, model.weights)"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "83prsh_up53S"
+      },
+      "source": [
+        "As you already know, the purpose of the “weight update” step (represented by the preceding\n",
+        "update_weights function) is to move the weights by “a bit” in a direction that\n",
+        "will reduce the loss on this batch. \n",
+        "\n",
+        "The magnitude of the move is determined by the\n",
+        "“learning rate,” typically a small quantity. The simplest way to implement this\n",
+        "`update_weights` function is to subtract `gradient * learning_rate` from each weight:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qZGORPMzqHQW"
+      },
+      "source": [
+        "learning_rate = 1e-3\n",
+        "\n",
+        "def update_weights(gradients, weights):\n",
+        "  for g, w in zip(gradients, weights):\n",
+        "    # assign_sub is the equivalent of -= for TensorFlow variables\n",
+        "    w.assign_sub(g * learning_rate)"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ttlQkrtOqrjd"
+      },
+      "source": [
+        "In practice, you would almost never implement a weight update step like this by hand.\n",
+        "\n",
+        "Instead, you would use an Optimizer instance from Keras, like this:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "87dAkKgLqsfS"
+      },
+      "source": [
+        "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-3)\n",
+        "\n",
+        "def update_weights2(gradients, weights):\n",
+        "  optimizers.apply_gradients(zip(gradients, weights))"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y1rrgZhnrH9p"
+      },
+      "source": [
+        "Now that our per-batch training step is ready, we can move on to implementing an\n",
+        "entire epoch of training."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nTweV6IhrIaU"
+      },
+      "source": [
+        "##The full training loop"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ALwhgRfyrKNA"
+      },
+      "source": [
+        "An epoch of training simply consists of repeating the training step for each batch in\n",
+        "the training data, and the full training loop is simply the repetition of one epoch:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tg5BVRZwrR05"
+      },
+      "source": [
+        "def fit(model, images, labels, epochs, batch_size=128):\n",
+        "  for epoch_counter in range(epochs):\n",
+        "    print(f\"Epoch {epoch_counter}\")\n",
+        "    batch_generator = BatchGenerator(images, labels)\n",
+        "    for batch_counter in range(batch_generator.num_batches):\n",
+        "      images_batch, labels_batch = batch_generator.next()\n",
+        "      loss = one_training_step(model, images_batch, labels_batch)\n",
+        "      if batch_counter % 100 == 0:\n",
+        "        print(f\"loss at batch {batch_counter}: {loss:.2f}\")"
+      ],
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TtG66svwtQCk"
+      },
+      "source": [
+        "Let’s test drive it:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y-B7veNXtQcB"
+      },
+      "source": [
+        "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
+        "\n",
+        "train_images = train_images.reshape((60000, 28 * 28))\n",
+        "train_images = train_images.astype(\"float32\") / 255\n",
+        "test_images = test_images.reshape((10000, 28 * 28))\n",
+        "test_images = test_images.astype(\"float32\") / 255"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OTY-uk0btXgY",
+        "outputId": "f7e9e16d-e0f3-45ff-fd39-3553f7ee9cb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 278
+        }
+      },
+      "source": [
+        "fit(model, train_images, train_labels, epochs=10, batch_size=128)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 0\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-47-95d2297f2eb5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-45-039de3d81b17>\u001b[0m in \u001b[0;36mfit\u001b[0;34m(model, images, labels, epochs, batch_size)\u001b[0m\n\u001b[1;32m      7\u001b[0m       \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mone_training_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimages_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mbatch_counter\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m100\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"loss at batch {batch_counter}: {loss:.2f}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to NoneType.__format__"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "knQSqSyHu6Mm"
+      },
+      "source": [
+        "##Evaluating the model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lqvFAcNbu7Dy"
+      },
+      "source": [
+        "We can evaluate the model by taking the argmax of its predictions over the test images,\n",
+        "and comparing it to the expected labels:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MmwMLsaZu-Am"
+      },
+      "source": [
+        "predictions = model(test_images)\n",
+        "predictions = predictions.numpy()\n",
+        "\n",
+        "predicted_labels = np.argmax(predictions, axis=1)\n",
+        "matches = predicted_labels == test_labels\n",
+        "\n",
+        "print(f\"accuracy: {matches.mean(): .2f}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A3ZtpsBbxpMQ"
+      },
+      "source": [
+        "All done! As you can see, it’s quite a bit of work to do “by hand” what you can do in a\n",
+        "few lines of Keras code. But because you’ve gone through these steps, you should now\n",
+        "have a crystal clear understanding of what goes on inside a neural network when you\n",
+        "call fit(). \n",
+        "\n",
+        "Having this low-level mental model of what your code is doing behind the\n",
+        "scenes will make you better able to leverage the high-level features of the Keras API."
       ]
     }
   ]
